# phone-tools

./: .gitignore  README.md  pyproject.toml
phone_tools/: config.py  main.py  phone.py  read_log.py
phone_tools/.twinkle/.twinkle/: 062099137.cfg  gui_state.ini  twinkle.ch  twinkle.history  twinkle.log.old  twinkle.sys~
phone_tools/.twinkle/config/lang/: twinkle_cs.qm  twinkle_de.qm  twinkle_fr.qm  twinkle_nl.qm  twinkle_ru.qm  twinkle_sv.qm
