[tool.poetry]
name = "phone-tools"
version = "0.1.0"
description = ""
authors = ["Fabio Souza <fabiohcsouza@outlook.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pysipp = {git = "https://github.com/SIPp/pysipp.git"}
rich = "^13.7.0"
pytwinkle = "^0.1.3"
pexpect = "^4.9.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
