[tool.poetry]
name = "phone-tools"
version = "0.1.0"
description = ""
authors = ["Fabio Souza <fabiohcsouza@outlook.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.7.0"
pexpect = "^4.9.0"
click = "^8.1.7"
asyncclick = "^8.1.3.4"
textual = "^0.47.1"


[tool.poetry.group.dev.dependencies]
textual = {extras = ["dev"], version = "^0.47.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
